Fix jumping items on hover

--- a/assets/css/scss/components/_navbar.scss
+++ b/assets/css/scss/components/_navbar.scss
@@ -44,6 +44,7 @@
 
 @media (max-width: 991px) {
   .navbar-dropdown .nav-link {
+    border-bottom: 4px solid $white;
     padding: 0 15px;
   }
 
